--- a/store-data/package.json
+++ b/store-data/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "form",
+  "name": "store-data",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "axios": "^1.7.2",
+    "framer-motion": "^11.3.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
